# okPosTest

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
config/: settings.py  urls.py
shop/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
shop/migrations/: 0001_initial.py
